--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.servlet.multipart.enabled=true
 
 #???? ??? ?? ??
-spring.servlet.multipart.location=D:\\HamsterD-Front-WorkSpace\\hamsterd-front-workspace\\public\\upload
+spring.servlet.multipart.location=C:\\project\\HamsterD-Front-WorkSpace\\public\\upload
 
 
 #? ?? ?? ??? ?? ??
@@ -25,12 +25,12 @@ spring.servlet.multipart.max-request-size=300MB
 
 #?? ??? ?? ??
 spring.servlet.multipart.max-file-size=10MB
-#spring.jpa.hibernate.use-new-id-generator-mappings = false
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-file.upload.path =D:\\HamsterD-Front-WorkSpace\\hamsterd-front-workspace\\public\\upload
+file.upload.path =C:\\project\\HamsterD-Front-WorkSpace\\public\\upload
 
 
 
